apps/base/tool-miniflux/deploy/miniflux/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Tools
    gethomepage.dev/name: Miniflux
    gethomepage.dev/description: Miniflux is a minimalist and opinionated feed reader
    gethomepage.dev/icon: miniflux
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=miniflux,app.kubernetes.io/component!=reminiflux"
    # https://gethomepage.dev/en/services/miniflux/
    gethomepage.dev/widget.type: "miniflux"
    gethomepage.dev/widget.url: "http://miniflux.tool-miniflux.svc.cluster.local:8080"
    gethomepage.dev/widget.fields: '["unread", "read"]'
    #gethomepage.dev/widget.key: "changeme"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - miniflux.tool.web_domain_name
      secretName: ingress-tls
  rules:
  - host: miniflux.tool.web_domain_name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: miniflux
            port:
              name: http
